Unreleased
----------

- gave profile body a set width, so it doesn't fall out of its
  area in IE (LP #638326)

- put in correct version if corners.png, so IE will display the
  background on feed actions (LP #629013)

- removed IE calendar styles, that were actually breaking things
  (LP #629026)

- Removed Karl's implementation of Message in favor of the implementation in
  repoze.postoffice.

3.46 (2010-09-10)
-----------------

- fixed community filter buttons for Safari (LP #629010)

- fixed up styles on profile page to make all browsers happy
  (LP #634110)

- Slightly reduced content area width to avoid content shifting
  while browser zooming (LP #629577)

- Fix 'delete_resource.html' view for content outside of communities
  (e.g., profile photos). (LP #634139)

- Derive ``creator`` for uploaded photo from the current user, rather than
  the container's name. (LP #633191)

- Improve contentfeeds description of content added / modified inside a
  profile. (LP #628285)

- Workflow initialization is now delayed for temporary images created by
  Image Drawer when uploading images in the context of an 'Add Content' form.
  (LP #619977)

- Added fault tolerance for 'None' values from formish for blog entry
  attachments. (LP #618074)

- Fixed 'add_user' script to initialize workflow for new profile.

- Added form validation to catch years earlier than 1900. (LP# 632451)

3.44 (2010-09-02)
-----------------

- Un-broke the ``manage_tags.html`` view due to clash over main template's
  use of top-level ``tags`` name. (LP #629009)

- Made sure icon is centered on filter indicator button. (LP #628833)

- Fixed filter button display in IE. (LP #628281)

- Merged ``ree-jsupgrade-2-tiny`` branch.

  - Upgraded TinyMCE WYSIWYG widget.

  - Upgraded jQuery libraries.

- Merged ``chrissy-portlets`` branch:

 - Updated intranet portlets to conform to site portlet styles

 - Cleaned up Active People portlet

 - Added DOCTYPE, so IE displays in standards mode
